BITMAKER-3465 Stats module: Apply pagination to jobs per day in estela (#204)
* Added spiders endpoint to global stats and modified the stats serializers schema

* Fixed issues with api generation, changed some schema responses and updated viewsets names

* Added jobs action method to spiders viewset

* Added the integration in frontend with the backend, disabled the expandable feature on the stats table

* Disabling expandable row on stats table section

* Fix issues mentioned on my reviewer's comments
