# estela-web/src/services/api/generated-api/models/SpidersPagination.ts
@@ -1,0 +1,86 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * estela API v1.0 Documentation
+ * estela API Swagger Specification
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    Spider,
+    SpiderFromJSON,
+    SpiderFromJSONTyped,
+    SpiderToJSON,
+} from './';
+
+/**
+ * 
+ * @export
+ * @interface SpidersPagination
+ */
+export interface SpidersPagination {
+    /**
+     * 
+     * @type {number}
+     * @memberof SpidersPagination
+     */
+    count: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof SpidersPagination
+     */
+    readonly next?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof SpidersPagination
+     */
+    readonly previous?: string | null;
+    /**
+     * 
+     * @type {Array<Spider>}
+     * @memberof SpidersPagination
+     */
+    results: Array<Spider>;
+}
+
+export function SpidersPaginationFromJSON(json: any): SpidersPagination {
+    return SpidersPaginationFromJSONTyped(json, false);
+}
+
+export function SpidersPaginationFromJSONTyped(json: any, ignoreDiscriminator: boolean): SpidersPagination {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'count': json['count'],
+        'next': !exists(json, 'next') ? undefined : json['next'],
+        'previous': !exists(json, 'previous') ? undefined : json['previous'],
+        'results': ((json['results'] as Array<any>).map(SpiderFromJSON)),
+    };
+}
+
+export function SpidersPaginationToJSON(value?: SpidersPagination | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'count': value.count,
+        'results': ((value.results as Array<any>).map(SpiderToJSON)),
+    };
+}
+
+
